# National-Data

./: .gitignore  README.md  data_processing.py  main.py  pyproject.toml  readme.md  tree_month  tree_quarter  tree_year
data_month/zb/交通运输/: 全国港口货物吞吐量（2019-）.xlsx  旅客周转量.xlsx  旅客运输量.xlsx  规模以上港口吞吐量（2005-2018）.xlsx  货物周转量.xlsx  货物运输量.xlsx
data_month/zb/价格指数/: 分行业工业生产者出厂价格指数(上年同月=100)(2007-2013).xlsx  分行业工业生产者出厂价格指数(上年同月=100)(2014-2017).xlsx  分行业工业生产者出厂价格指数(上年同月=100)(2018-至今).xlsx  分行业工业生产者出厂价格指数(上年同期=100).xlsx  分行业工业生产者出厂价格指数(上月=100).xlsx
data_month/zb/固定资产投资(不含农户)/: 分行业固定资产投资情况(2004-2011).xlsx  分行业固定资产投资情况(2012-2017).xlsx  固定资产投资(不含农户)资金来源增速情况.xlsx  固定资产投资增速.xlsx  固定资产投资概况.xlsx  固定资产投资项目计划总投资增长情况.xlsx  按登记注册类型分固定资产投资增速.xlsx  按行业分固定资产投资增速（2018-）.xlsx  按行业分固定资产投资情况(1998-2003).xlsx  按行业分民间固定资产投资增速.xlsx
data_month/zb/国内贸易/: 按消费类型分社会消费品零售总额.xlsx  按经营地分社会消费品零售总额.xlsx  社会消费品零售总额.xlsx  网上零售额.xlsx  限额以上住宿和餐饮业经营情况(-2009).xlsx
data_month/zb/城镇调查失业率/: 城镇调查失业率.xlsx
data_month/zb/对外经济/: 外商直接投资.xlsx  进出口总额.xlsx
data_month/zb/工业/: 产品销售率(按现价计算).xlsx  其它工业企业主要经济指标.xlsx  国有工业企业主要经济指标.xlsx  国有控股工业企业主要经济指标.xlsx  外商及港澳台投资工业企业主要经济指标.xlsx  大中型国有控股工业企业主要经济指标.xlsx  大中型工业企业主要经济指标.xlsx  工业企业主要经济指标.xlsx  工业分大类行业增加值增长速度(2003-2011).xlsx  工业分大类行业增加值增长速度(2012-2017).xlsx  工业分大类行业增加值增长速度(2018-至今).xlsx  工业增加值增长速度.xlsx  按三大门类分工业增加值增长速度.xlsx  按经济类型分工业增加值增长速度.xlsx  私营工业企业主要经济指标.xlsx  股份制工业企业主要经济指标.xlsx  股份合作工业企业主要经济指标.xlsx  (+1 more)
data_year/zb/: 社会消费品零售总额.xlsx
src/: data_processing.py  directory_handler.py  document_handler.py  download_handler.py  main.py
src/national_data/: __init__.py
(+3791 files in other folders)
