[project]
name = "national-data"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
